# comfyui-alice-tools

./: .gitignore  __init__.py  nodes.py  pyproject.toml
.trellis/: .template-hashes.json
.trellis/spec/backend/: comfyui-node-contracts.md  database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: comfyui-extension-contracts.md  index.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-01-powerlora-add-chooser/: task.json
.trellis/tasks/archive/2026-05/05-01-powerlora-add-chooser/: prd.md  task.json
.trellis/workspace/alice/: index.md  journal-1.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/composables/: createVueNodeWidget.js
frontend/src/extensions/: index.js
frontend/src/extensions/controlNetStack/: constants.js  index.js  layout.js  lifecycle.js  registerExtension.js  serialization.js
frontend/src/extensions/modelLoaderResolution/: index.js
frontend/src/extensions/powerLoraStack/: constants.js  layout.js  lifecycle.js  registerExtension.js  serialization.js  state.js
frontend/src/extensions/sampler/: index.js
frontend/src/extensions/shared/: modelPaths.js
py/: constants.py  controlnet_nodes.py  controlnet_stack.py  latent.py  lora_stack.py  model_loader.py  model_paths.py  native_inputs.py  nodes.py  prompt_node.py  resolution.py  sampler_node.py  stack_node.py  types.py
web_version/v1/: alice-tools.js
(+20 files in other folders)
