[project]
name = "comfyui-alice-tools"
description = "To enhance the usability of ComfyUI, optimizations and integrations have been implemented for several commonly used nodes."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/senjyouhara/comfyui-alice-tools"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "senjyouhara"
DisplayName = "comfyui-alice-tools"
Icon = ""
